<resources>
    <string name="app_name">Vetcare</string>
    <string name="bieLblSaludo">Hola: </string>

    <!--SesiÃ³n-->
    <string name="logTxtCorreo">Correo</string>
    <string name="logTxtClave">ContraseÃ±a</string>
    <string name="logBtnIngresar">Ingresar</string>
    <string name="logBtnRegistrate">Registrate</string>
    <string name="logChkRecordar">Recordar sesiÃ³n</string>
    <string name="logBtnSOS">SOS</string>
    <string name="logTxtOlvidasteContrasena">Â¿Olvidate tu contraseÃ±a</string>
    <string name="logLblFamilia">Vetcare</string>

    <!--Olvidaste ContraseÃ±a-->
    <string name="olvLblOlvidasteContrasenaTitulo">Â¿Olvidaste tu contraseÃ±a?</string>
    <string name="olvLblOlvidasteContrasenaInstrucciones">Ingresa tu correo electrÃ³nico.Te enviaremos un cÃ³digo para continuar.</string>
    <string name="olvTxtOlvidasteContrasenaCorreo">Correo electrÃ³nico</string>
    <string name="olvBtnOlvidasteContrasenaEnviar">Enviar</string>

    <!--Confirmar Codigo-->
    <string name="confLblConfirmarCodigoTitulo">Verifica tu identidad</string>
    <string name="confLblConfirmarCodigoInstrucciones">Ingresa el cÃ³digo de seis digitos</string>
    <string name="confTxtConfirmarCodigo">CÃ³digo</string>
    <string name="confBtnConfirmarCodigoVerificar">Verificar</string>

    <!--Cambiar contraseÃ±a-->
    <string name="camLblCambiarContrasenaTitulo">Cambia tu contraseÃ±a</string>
    <string name="camLblCambiarContrasenaInstrucciones">Para mayor seguridad, deberÃ¡s crear una nueva contraseÃ±a.</string>
    <string name="camTxtCambiarContrasenaNueva">Nueva contraseÃ±a</string>
    <string name="camTxtCambiarContrasenaConfirmarNueva">Confirmar contraseÃ±a</string>
    <string name="camBtnCambiarContrasenaAceptar">Aceptar</string>


    <!--Registro usuario-->
    <string name="regLblRegistroTitulo">Empecemos registrando tus datos</string>
    <string name="regTxtRegistroNombre">Nombre(s)</string>
    <string name="regTxtRegistroApellido">Apellidos</string>
    <string name="regTxtRegistroDni">DNI</string>
    <string name="regTxtRegistroFechaNacimiento">Fecha de nacimiento</string>
    <string name="regTxtRegistroTelefono">TelÃ©fono</string>
    <string name="regTxtRegistroCorreo">Correo electrÃ³nico</string>
    <string name="regRbtRegistroSinDefinir">Sin definir</string>
    <string name="regRbtRegistroFemenino">Femenino</string>
    <string name="regRbtRegistroMasculino">Masculino</string>
    <string name="regTxtRegistroContrasena">ContraseÃ±a</string>
    <string name="regTxtRegistroConfirmarContrasena">Confirmar contraseÃ±a</string>
    <string name="regTxtRegistroTerminosCondiciones">Terminos y Condiciones</string>
    <string name="regDescIconoSiguiente">Icono siguiente</string>

    <!--Registro de primera mascota-->
    <string name="regLblRegistroPrimMascotaTitulo">CuÃ©ntanos Sobre Tu Mascota </string>
    <string name="regLblRegistroPrimMascota">Si tienes mÃ¡s de una no te preocupes, luego podrÃ¡s registrar otra. </string>
    <string name="regTxtRegistroPrimMascotaNombre">Nombre(s)</string>
    <string name="regLblRegistroPrimMascotaEdad">Edad</string>
    <string name="regTxtRegistroPrimMascotaAnios">AÃ±os</string>
    <string name="regTxtRegistroPrimMascotaMeses">Meses</string>
    <string name="mascDescIconoRegistroPrimMascota">Icono mascota</string>

    <!--Bienvenida-->
    <string name="bieLblQuienesSomos">Â¿QuiÃ©nes somos?</string>
    <string name="bieLblInformacion">En Vetcare, somos un equipo de profesionales dedicados al bienestar y salud de tus mascotas. Con aÃ±os de experiencia en el cuidado veterinario, ofrecemos una amplia gama de servicios, desde consultas y atenciÃ³n de urgencias hasta procedimientos especializados y tratamientos preventivos."\n"Nos enorgullecemos de tratar a cada mascota como si fuera nuestra, brindando un entorno seguro, confiable y acogedor para ellos y sus dueÃ±os. Creemos en una atenciÃ³n integral y personalizada, entendiendo las necesidades especÃ­ficas de cada mascota.</string>



    <!--FRAGMENTOS-->
    <!--    Reserva de cita-->
    <string name="resLblReservaTitulo">Reservar cita</string>
    <string name="resLblReservarServicio">Servicio</string>
    <string name="resLblReservarVeterinario">Veterinario</string>
    <string name="resLblReservarMascota">Mascota</string>
    <string name="resLblReservarHora">Hora</string>
    <string name="resLblReservarSede">Sede</string>
    <string name="resBtnReservarCita">Reservar cita</string>

    <!--Categorias de Productos-->
    <string name="proLblCategProductosTitulo">Productos</string>
    <string name="proLblComida">Comida</string>
    <string name="proLblHigiene">Higiene</string>
    <string name="proLblJuguete">Juguetes</string>
    <string name="proLblAccesorios">Accesorios</string>
    <string name="proDescIconoBuscar">Icono buscar</string>
    <string name="proDescIconoCarrito">Icono carrito</string>
    <string name="proDescIconoComida">Icono comida</string>
    <string name="proDescIconoHigiene">Icono higiene</string>
    <string name="proDescIconoJuguete">Icono juguete</string>
    <string name="proDescIconoAccesorios">Icono accesorios</string>

    <!--Productos-->
    <string name="proDescIconoComidaCanbo">Comida canbo</string>
    <string name="proLblComidaCanbo">Canbo super premium S/.23.00</string>
    <string name="proDescIconoComidaCanbo2">Comida canbo 2</string>
    <string name="proLblComidaCanbo2">Canbo super premium S/.23.00</string>
    <string name="proDescIconoComidaWhiskas">Comida whisksa</string>
    <string name="proLblComidaWhiskas">Whiska super premium S/.25.00</string>
    <string name="proDescIconoComidaWhiskas2">Comida whiskas 2</string>
    <string name="proLblComidaWhiskas2">Whiskas super premium S/.25.00</string>

    <!--Mis citas-->
    <string name="citLblMisCitasTitulo">Mis citas</string>
    <string name="citLblFechaCita">26 junio</string>
    <string name="citLblDetalleCita">VacunaciÃ³n / Perro</string>
    <string name="citLblProximaCita">PrÃ³ximas citas</string>
    <string name="citLblFechaProximaCita">28 junio</string>
    <string name="citLblDetalleProximaCita">VacunaciÃ³n / Perro</string>

    <!--Nosotros-->
    <string name="nosLblNumeroVetcare">+51 902 458 162</string>
    <string name="nosLblDescripcion">Nuestro equipo de veterinarios estÃ¡ dedicado a proporcionar servicios integrales de salud y bienestar animal, desde consultas preventivas y vacunaciÃ³n hasta tratamientos especializados y emergencias. Nos enorgullece contar con instalaciones modernas y equipadas para la atenciÃ³n de pequeÃ±os animales, con Ã¡reas exclusivas para cirugÃ­a, cuidados intensivos y diagnÃ³sticos avanzados.</string>
    <string name="nosBtnEncuentranos">EncuÃ©ntranos</string>


    <!--Perfil usuario-->
    <string name="perLblPerfilTitulo">Perfil</string>
    <string name="perTxtNombre">Nombres</string>
    <string name="perTxtApellido">Apellidos</string>
    <string name="perTxtTelefono">TelÃ©fono</string>
    <string name="perTxtCorreo">Correo electrÃ³nico</string>
    <string name="perLblMisMascotas">Mis mascotas</string>
    <string name="perDescIconoUsuario">Icono usuario</string>
    <string name="perDescIconoEditar">Icono editar</string>
    <string name="perDescIconoMascota1">Icono mascota 1</string>
    <string name="perDescIconoMascota2">Icono mascota 2</string>
    <string name="perDescIconoAgregar">Icono agregar</string>
    <string name="perNombMascota1">Max</string>
    <string name="perNombMascota2">Wilson</string>

    <!--Mascota-->
    <string name="mascLblPerfilMascota">InformaciÃ³n de la mascota</string>
    <string name="mascDescIconoMascota">Icono mascota</string>
    <string name="mascDescIconoEditar">Icono editar</string>
    <string name="mascTxtNombreMascota">Nombre</string>
    <string name="mascTxtEdadMascota">Edad</string>
    <string name="mascTipoMascota">Seleccione un tipo</string>
    <string name="mascTxtRazaMascota">Raza</string>

    <!--Agregar Mascota-->
    <string name="agremasEdtNombreMascota">Nombre de la mascota</string>
    <string name="agremasEdtEdadAnios">AÃ±os</string>
    <string name="agremasEdtEdadMeses">Meses</string>
    <string name="agremasEdtRazaMascota">Raza de la mascota</string>
    <string name="agremascBtnSelecImg">Seleccionar Imagen</string>
    <string name="agremascBtnAgregar">Agregar Mascota</string>
    <string name="agremascLblNombre">Nombre</string>
    <string name="agremascLblEdad">Edad</string>
    <string name="agremascLblTipo">Tipo</string>
    <string name="agremascImgMascota">Vista previa de la imagen de mascota</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>