<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragmentos.AgregarMascotaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar Mascota"
            android:textSize="35sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/titulo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regLblRegistroPrimMascota"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginVertical="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/agremasEdtNombreMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agremasEdtNombreMascota"
                android:maxLength="100"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agremascLblEdad"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginVertical="10dp"
            android:textColor="@color/titulo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <EditText
                    android:id="@+id/agremasEdtEdadAnios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agremasEdtEdadAnios"
                    android:inputType="number"
                    android:layout_marginRight="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/agremasEdtEdadMeses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agremasEdtEdadMeses"
                    android:inputType="number"
                    android:layout_marginLeft="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Spinner para el tipo de mascota -->
        <Spinner
            android:id="@+id/agremascSpinnerTipoMascota"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:minHeight="48dp"/>

        <!-- Spinner para la raza de la mascota -->
        <Spinner
            android:id="@+id/agremascSpinnerRazaMascota"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>

        <ImageButton
            android:id="@+id/agremascImgMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/fondoTransparente"
            android:contentDescription="@string/agremascImgMascota"
            android:src="@drawable/user_mascota"
            android:layout_marginBottom="10dp"/>
        
        <Button
            android:id="@+id/agremascBtnAgregarMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agremascBtnAgregar"
            android:textAllCaps="false"
            android:backgroundTint="@color/btnPrimario"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginHorizontal="80dp"/>

    </LinearLayout>
</FrameLayout>