<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragmentos.ReservarCitaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <!-- Titulo - Fijado arriba -->
        <TextView
            android:id="@+id/reslblReservarT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="32sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/resLblReservaTitulo"
            android:textColor="@color/titulo"
            android:layout_marginTop="10dp"/>


        <!-- ScrollView para hacer el contenido desplazable -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="690dp"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Calendario -->
                <CalendarView
                    android:id="@+id/calendReserva"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1" />

                <!-- Mascota -->
                <TextView
                    android:id="@+id/resLblReservarMascota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/resLblReservarMascota"/>

                <Spinner
                    android:id="@+id/resCboReservaMascota"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginBottom="5dp"/>

                <!-- Servicio -->
                <TextView
                    android:id="@+id/lblReservarServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/resLblReservarServicio"
                    tools:ignore="TextSizeCheck" />

                <Spinner
                    android:id="@+id/resCboReservaServicio"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginBottom="5dp"/>

                <!-- Veterinario (APARECE SOLO SI EL SERVICIO LO REQUIERE) -->
                <TextView
                    android:id="@+id/lblReservarVeterinario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/resLblReservarVeterinario"
                    tools:ignore="TextSizeCheck"
                    android:visibility="gone"/>
                <Spinner
                    android:id="@+id/resCboReservaVeterinario"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"/>

                <!-- Hora -->
                <TextView
                    android:id="@+id/resLblReservarHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/resLblReservarHora" />
                <Spinner
                    android:id="@+id/resCboReservaHora"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginBottom="5dp"/>

                <!-- Sede -->
                <TextView
                    android:id="@+id/resLblReservarSede"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/resLblReservarSede" />
                <Spinner
                    android:id="@+id/resCboReservaSede"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginBottom="5dp" />

                <!-- BotÃ³n-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <Button
                        android:id="@+id/resBtnReservarCita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/resBtnReservarCita"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="80dp"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/btnPrimario"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
