<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragmentos.NosotrosFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/titulo"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nosLblNumeroVetcare"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="20dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icono_facebook"
                android:background="@color/fondoTransparente"
                android:layout_marginRight="15dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icono_whatsapp"
                android:background="@color/fondoTransparente"
                android:layout_marginLeft="15dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/nosBtnEncuentranos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/nosBtnEncuentranos"
            android:layout_gravity="center"
            android:layout_marginHorizontal="80dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/btnPrimario"
            android:layout_marginTop="30dp"/>


<!--        <org.osmdroid.views.MapView-->
<!--            android:id="@+id/map"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->

    </LinearLayout>


</FrameLayout>